--- a/P11/main.html
+++ b/P11/main.html
@@ -8,19 +8,44 @@
 </head>
     <body>
         <header>
-        <h1>Hello Mobile Web</h1>
+        <h1>P11 - Header</h1>
         </header>
+        <br/>
         <content>
-            <form> 
-                <label for="name">Name</label>
-                <input type="text" placeholder="Your name..." id="name"> 
-                <label for="name2">Name2</label>
-                <input type="text" placeholder="Your name2..." id="name2"> 
-                <label for="age">Age</label>
-                <input type="text" placeholder="Your age..." id="age" label="Age"> 
-                <input type="submit" value="Send">
+            <form class="flex-nav"> 
+                <div>
+                    <label for="name">Name</label>
+                    <input type="text" placeholder="Your name..." id="name"> 
+                </div>
+                <div>
+                    <label for="name2">Name2</label>
+                    <input type="text" placeholder="Your name2..." id="name2"> </div>
+                <div>   
+                    <label for="age">Age</label>
+                    <input type="text" placeholder="Your age..." id="age" label="Age"> 
+                </div>
+                <div>
+                    <label for="gender">Gender</label>
+                    <input type="checkbox" id="gender" name="gender">
+                </div>
+                <div>
+                    <label for="pw">Password</label>
+                    <input type="password" id="password" name="password">
+                </div>
+                <div>
+                    <label for="email">Mail</label>
+                    <input type="email" id="email" name="email">
+                </div>
+                <div>
+                    <input type="submit" value="Send">
+                </div>
+
             </form>
         </content>
+        
+        <br/>
+
+        <br/>
         <footer>
             My footer
         </footer>
