--- a/P11/main.html
+++ b/P11/main.html
@@ -30,7 +30,7 @@
                 </div>
                 <div>
                     <label for="pw">Password</label>
-                    <input type="password" id="password" name="password">
+                    <input type="password" id="pw" name="password">
                 </div>
                 <div>
                     <label for="email">Mail</label>
