--- a/P10/page1.html
+++ b/P10/page1.html
@@ -17,15 +17,21 @@
         
         <picture>
             <source 
-                media="(min-width: 960px)" 
-                srcset="practice\sample-images\img_4032p.jpg 2048w, practice\sample-images\img_2016p.jpg 1024w" 
-                sizes="50vw">
+                media="(min-width: 4032px)" 
+                srcset="practice\sample-images\img_4032p.jpg 4032w" 
+                sizes="100vw">
             <source 
-                media="(min-width: 480px)" 
-                srcset="practice\sample-images\img_1008p.jpg"                 
-                sizes="50vw">
+                media="(min-width: 2016px)" 
+                srcset="practice\sample-images\img_2016p.jpg 2016w, practice\sample-images\img_1008p.jpg 1008w, practice\sample-images\img_504p.jpg 504w" 
+                sizes="100vw">
             <source 
-                srcset="practice\sample-images\img_504p.jpg 2x, practice\sample-images\img_504p.jpg 1x">
+                media="(min-width: 1008px)" 
+                srcset="practice\sample-images\img_1008p.jpg 1008w, practice\sample-images\img_504p.jpg 504w"                 
+                sizes="100vw">
+            <source 
+                media="(min-width: 504px)" 
+                srcset="practice\sample-images\img_504p.jpg 504w"                 
+                sizes="100vw">
             <img 
                 src="practice\sample-images\img_4032p.jpg" 
                 alt="A photo of London by night">
