--- a/11_StyleAndLayout/main_02.html
+++ b/11_StyleAndLayout/main_02.html
@@ -1,42 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style_02.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style_02.css">
     <title>Mobile Web Demo - P11</title>
 </head>
+
     <body>
+        <div class="app-wrap"></div>
         <header>
-        <h1>P11 - Header</h1>
+            <h1>P11 - Header</h1>
         </header>
         <br/>
         <div class="content">
             <form> 
-                <div class="form-container">
+                <div class="container">
                     <label for="name">Name</label>
                     <input type="text" placeholder="Your name..." id="name"> 
                 </div>
-                <div class="form-container">
+                <div class="container">
                     <label for="name2">Name2</label>
                     <input type="text" placeholder="Your name2..." id="name2"> </div>
-                <div class="form-container">   
+                <div class="container">   
                     <label for="age">Age</label>
                     <input type="text" placeholder="Your age..." id="age" label="Age"> 
                 </div>
-                <div class="form-container">
+                <div class="container">
                     <label for="gender">Gender</label>
                     <input type="checkbox" id="gender" name="gender">
                 </div>
-                <div class="form-container">
+                <div class="container">
                     <label for="pw">Password</label>
                     <input type="password" id="pw" name="password">
                 </div>
-                <div class="form-container">
+                <div class="container">
                     <label for="email">Mail</label>
                     <input type="email" id="email" name="email">
                 </div>
-                <div class="form-container">
+                <div class="container">
                     <input type="submit" value="Send">
                 </div>
 
@@ -49,5 +51,6 @@
         <footer>
             My footer
         </footer>
+    </div>
     </body>
 </html>
